Implementacion de la creacion de la factura en la salida del vehiculo